--- a/worker/package.json
+++ b/worker/package.json
@@ -4,7 +4,12 @@
   "description": "Easily follow status pages and send updates to your Discord server!",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "wrangler dev src/index.ts"
+    "dev": "wrangler dev src/index.ts",
+    "lint:check": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "prettier:check": "prettier --check \"**/*.{ts,js,mjs,json,md}\"",
+    "prettier:write": "prettier --check --write \"**/*.{ts,js,mjs,json,md}\"",
+    "pre-commit": "node --run lin:fix && npm run prettier:write"
   },
   "keywords": [
     "cloudflare",
@@ -17,6 +22,11 @@
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250321.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "globals": "^16.0.0",
     "wrangler": "^4.4.0"
   }
 }
